--- a/style.css
+++ b/style.css
@@ -1,101 +1,117 @@
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700");
-
-
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .container {
-    width: 700px;
-  }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .container {
-    width: 500px;
-  }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .container {
-    width: 300px;
-  }
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900);
+@import url(https://use.fontawesome.com/releases/v5.2.0/css/all.css);
 
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: lighter;
-  background-color: black;
-  color: #575F7D;
-  font-size: 14px;
-  margin: 0;
-  padding-bottom: 150px;
-  padding-top: 150px;
-}
+    background: #F7F9FC;
+    color: #575F7D;
+    font-family: 'Lora', serif;
+    font-size: 17px;
+    font-weight: lighter;
+  }
+ 
+  h1, h2, h3 {
+    font-family: 'Roboto', sans-serif;
+  }
 
-h1, h2 {
-  text-align: center;
-  color: grey;
-}
+  h1 {
+    color: #575F7D;
+    font-size: 32px;
+    font-weight: 900;
+  }
 
-h4 {
-  color: black;
-}
+  h2 {
+    color: 01c5c4;
+    font-size: 20px;
+    font-weight: lighter;
+    font-weight: 500;
+  }
+  
+  h3 {
+    color: c56183;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
+  a {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: #6B72E1;
+    font-weight: 600;
+    font-size: 16px;
+  }
+  a:hover {
+    color: black;
+  }
+  
+  .container {
+    width: 700px;
+    margin: 40px auto;
+  }
+  
+  .card-white {
+    background-color: white;
+    padding: 40px;
+    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+    border-radius: 4px;
+    margin: 20px 0px;
+    text-align: center;
+  }
 
-button:hover {
-  background-color: red;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-i {
-  color: black;
-}
-
-i:hover {
-  background-color: red;
-}
-
-.card-white {
-  background-color: rgb(220, 220, 220);
-  padding: 50px;
-  box-shadow: 10px 20px 30px rgba(0,0,0,0.1);
-  border-radius: 4px;
-  margin: 50px 70px;
-  text-align: center;
-}
-
-div {
-  display: block;
-}
-
-.img-circle {
-  width:160px;
-  height:160px;
-  border-radius:60%;
-  overflow:hidden;
-}
-
-.list-inline {
-  display: inline-block;
-  list-style: none;
-  font-size: 18px;
-  padding-left: 0px;
-  margin: 0;
-  text-align: right;
-  color: black;
-}
-
-.list-inline li {
-  display: inline-block;
-  padding: 20px;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 900px;
-}
-
+  .img-circle {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+  .btn-blue {
+    background-color: #6B72E1;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 4px;
+  }
+  .btn-blue:hover {
+    background-color: black;
+    color: white;
+  }
+  .list-inline {
+    list-style: none;
+    padding-left: 0px;
+  }
+  
+  .list-inline li {
+    display: inline;
+    padding: 10px;
+  }
+  .list-inline i {
+    font-size: 50px;
+    color: rgb(230, 230, 230);
+  }
+  .list-inline i:hover {
+    color: black;
+  }
+  
+  /* Design adjustments using id (1% design remaining) */
+  #introduction p {
+    margin-bottom: 40px;
+  }
+  
+  @media (max-width: 960px) {
+    /* For a screen < 960px, this CSS will be read */
+    .container {
+      width: 700px;
+    }
+  }
+  @media (max-width: 720px) {
+    /* For a screen < 720px, this CSS will be read */
+    .container {
+      width: 500px;
+    }
+  }
+  @media (max-width: 540px) {
+    /* For a screen < 540px, this CSS will be read */
+    .container {
+      width: 300px;
+    }
+  }
