--- a/style.css
+++ b/style.css
@@ -1,125 +1,102 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900);
-@import url(https://use.fontawesome.com/releases/v5.2.0/css/all.css);
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700");
+
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
+
 
 
 body {
-    background: #F7F9FC;
-    color: rgb(88, 96, 126);
-    font-family: 'Lora', serif;
-    font-size: 17px;
-    font-weight: lighter;
-    /* background-image: url(https://images.unsplash.com/photo-1528988719300-046ff7faf8cb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80); */
-    /* background-image: url(images/Oia.JPG); */
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Oia.JPG');
-    background-size: cover;
-  }
- 
-  h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-  }
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter;
+  background-color: black;
+  color: #575F7D;
+  font-size: 14px;
+  margin: 0;
+  padding-bottom: 150px;
+  padding-top: 150px;
+}
 
-  h1 {
-    color: rgb(88, 96, 126);
-    font-size: 32px;
-    font-weight: 900;
-  }
+h1, h2 {
+  text-align: center;
+  color: grey;
+}
 
-  h2 {
-    color: rgb(114, 64, 64);
-    font-size: 20px;
-    font-weight: lighter;
-    font-weight: 500;
-  }
-  
-  h3 {
-    color: rgb(114, 64, 64);
-    font-size: 20px;
-    font-weight: 500;
-  }
-  
-  a {
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-    color: rgb(114, 64, 64);
-    /* opacity: 0.5; */
-    font-weight: 600;
-    font-size: 16px;
-  }
-  a:hover {
-    color: black;
-  }
-  
-  .container {
-    width: 700px;
-    margin: 40px auto;
-  }
-  
-  .card-white {
-    background-color: white;
-    padding: 40px;
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-    border-radius: 4px;
-    margin: 20px 0px;
-    text-align: center;
-  }
+h4 {
+  color: black;
+}
 
-  .img-circle {
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-  }
-  .btn-blue {
-    background-color: hsla(0, 68%, 30%, 0.557);
-    color: brown;
-    padding: 15px 20px;
-    border-radius: 4px;
-    transition: 1s;
-  }
-  .btn-blue:hover {
-    background-color: #811818bb;
-    color: white;
-    transition: 1s;
-  }
-  .list-inline {
-    list-style: none;
-    padding-left: 0px;
-  }
-  
-  .list-inline li {
-    display: inline;
-    padding: 10px;
-  }
-  .list-inline i {
-    font-size: 50px;
-    color: hsla(0, 68%, 30%, 0.557);
-  }
-  .list-inline i:hover {
-    color: black;
-    transition: 1s;
-  }
-  
-  /* Design adjustments using id (1% design remaining) */
-  #introduction p {
-    margin-bottom: 40px;
-  }
-  
-  @media (max-width: 960px) {
-    /* For a screen < 960px, this CSS will be read */
-    .container {
-      width: 700px;
-    }
-  }
-  @media (max-width: 720px) {
-    /* For a screen < 720px, this CSS will be read */
-    .container {
-      width: 500px;
-    }
-  }
-  @media (max-width: 540px) {
-    /* For a screen < 540px, this CSS will be read */
-    .container {
-      width: 300px;
-    }
-  }
+button:hover {
+  background-color: red;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+
+i {
+  color: black;
+}
+
+i:hover {
+  background-color: red;
+}
+
+.card-white {
+  background-color: rgb(220, 220, 220);
+  padding: 50px;
+  box-shadow: 10px 20px 30px rgba(0,0,0,0.1);
+  border-radius: 4px;
+  margin: 50px 70px;
+  text-align: center;
+}
+
+div {
+  display: block;
+}
+
+.img-circle {
+  width:160px;
+  height:160px;
+  border-radius:60%;
+  overflow:hidden;
+  object-fit: cover;
+}
+
+.list-inline {
+  display: inline-block;
+  list-style: none;
+  font-size: 18px;
+  padding-left: 0px;
+  margin: 0;
+  text-align: right;
+  color: black;
+}
+
+.list-inline li {
+  display: inline-block;
+  padding: 20px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 900px;
+}
+
