--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
 
 body {
     background: #F7F9FC;
-    color: #575F7D;
+    color: #554f4d;
     font-family: 'Lora', serif;
     font-size: 17px;
     font-weight: lighter;
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Oia.JPG');
+    background-size: cover;
   }
  
   h1, h2, h3 {
@@ -16,20 +18,20 @@ body {
   }
 
   h1 {
-    color: #575F7D;
+    color:  #554f4d;
     font-size: 32px;
     font-weight: 900;
   }
 
   h2 {
-    color: 01c5c4;
+    color: #68290b;
     font-size: 20px;
     font-weight: lighter;
     font-weight: 500;
   }
   
   h3 {
-    color: c56183;
+    color: #68290b;
     font-size: 20px;
     font-weight: 500;
   }
@@ -37,7 +39,7 @@ body {
   a {
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
-    color: #6B72E1;
+    color: rgb(114, 64, 64);
     font-weight: 600;
     font-size: 16px;
   }
@@ -61,19 +63,20 @@ body {
 
   .img-circle {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
     object-fit: cover;
   }
   .btn-blue {
-    background-color: #6B72E1;
-    color: white;
+    background-color: hsla(0, 68%, 30%, 0.557);
+    color: #973607;
     padding: 15px 20px;
     border-radius: 4px;
   }
   .btn-blue:hover {
-    background-color: black;
+    background-color: #68290b;
     color: white;
+    transition: 1s;
   }
   .list-inline {
     list-style: none;
@@ -86,10 +89,11 @@ body {
   }
   .list-inline i {
     font-size: 50px;
-    color: rgb(230, 230, 230);
+    color: hsla(0, 68%, 30%, 0.557);
   }
   .list-inline i:hover {
-    color: black;
+    color: #68290b;
+    transition: 1s;
   }
   
   /* Design adjustments using id (1% design remaining) */
