--- a/style.css
+++ b/style.css
@@ -1,121 +1,107 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900);
-@import url(https://use.fontawesome.com/releases/v5.2.0/css/all.css);
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Poppins:300,400,500,700");
+
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
+
 
 
 body {
-    background: #F7F9FC;
-    color: #554f4d;
-    font-family: 'Lora', serif;
-    font-size: 17px;
-    font-weight: lighter;
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Oia.JPG');
-    background-size: cover;
-  }
- 
-  h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-  }
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter;
+  color: #461904;
+  font-size: 17px;
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Oia.JPG');
+  background-size: cover;
+}
 
-  h1 {
-    color:  #554f4d;
-    font-size: 32px;
-    font-weight: 900;
-  }
+h2 {
+  text-align: center;
+  color: #461904;
+  font-size: 22px;
+  font-weight: lighter;
+  font-weight: 500;
+}
 
-  h2 {
-    color: #68290b;
-    font-size: 20px;
-    font-weight: lighter;
-    font-weight: 500;
-  }
-  
-  h3 {
-    color: #68290b;
-    font-size: 20px;
-    font-weight: 500;
-  }
-  
-  a {
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-    color: rgb(114, 64, 64);
-    font-weight: 600;
-    font-size: 16px;
-  }
-  a:hover {
-    color: black;
-  }
-  
-  .container {
-    width: 700px;
-    margin: 40px auto;
-  }
-  
-  .card-white {
-    background-color: white;
-    padding: 40px;
-    box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-    border-radius: 4px;
-    margin: 20px 0px;
-    text-align: center;
-  }
+h1 {
+  font-size: 36px;
+  font-weight: 900;
+}
 
-  .img-circle {
-    border-radius: 50%;
-    width: 140px;
-    height: 140px;
-    object-fit: cover;
-  }
-  .btn-blue {
-    background-color: hsla(0, 68%, 30%, 0.557);
-    color: #973607;
-    padding: 15px 20px;
-    border-radius: 4px;
-  }
-  .btn-blue:hover {
-    background-color: #68290b;
-    color: white;
-    transition: 1s;
-  }
-  .list-inline {
-    list-style: none;
-    padding-left: 0px;
-  }
-  
-  .list-inline li {
-    display: inline;
-    padding: 10px;
-  }
-  .list-inline i {
-    font-size: 50px;
-    color: hsla(0, 68%, 30%, 0.557);
-  }
-  .list-inline i:hover {
-    color: #68290b;
-    transition: 1s;
-  }
-  
-  /* Design adjustments using id (1% design remaining) */
-  #introduction p {
-    margin-bottom: 40px;
-  }
-  
-  @media (max-width: 960px) {
-    /* For a screen < 960px, this CSS will be read */
-    .container {
-      width: 700px;
-    }
-  }
-  @media (max-width: 720px) {
-    /* For a screen < 720px, this CSS will be read */
-    .container {
-      width: 500px;
-    }
-  }
-  @media (max-width: 540px) {
-    /* For a screen < 540px, this CSS will be read */
-    .container {
-      width: 300px;
-    }
-  }
+
+.container {
+  width: 700px;
+  margin: 40px auto;
+}
+
+.card-white {
+  background-color: white;
+  padding: 40px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  border-radius: 4px;
+  margin: 20px 0px;
+  text-align: center;
+}
+
+.img-circle {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+.btn-blue {
+  background-color:#795949;
+  color: #c04308;
+  padding: 15px 20px;
+  border-radius: 4px;
+  transition: 1s;
+}
+.btn-blue:hover {
+  background-color: #49200c;
+  color: white;
+  transition: 1s;
+}
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.list-inline li {
+  display: inline;
+  padding: 10px;
+}
+.list-inline i {
+  font-size: 50px;
+  color: #795949;
+}
+.list-inline i:hover {
+  color: #49200c;
+  transition: 1s;
+}
+
+a {
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  color: rgb(114, 64, 64);
+  font-weight: 600;
+  font-size: 16px;
+}
+a:hover {
+  color: #49200c;
+}
