make my profile prettier

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1 {
 }
 .btn-blue {
   background-color:#795949;
-  color: #c04308;
+  color:#ca4b0d;
   padding: 15px 20px;
   border-radius: 4px;
   transition: 1s;
