--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ h1 {
   color: white;
   transition: 1s;
 }
+
 .list-inline {
   list-style: none;
   padding-left: 0px;
@@ -87,13 +88,51 @@ h1 {
   padding: 10px;
 }
 .list-inline i {
-  font-size: 50px;
+  font-size: 45px;
   color: #795949;
 }
 .list-inline i:hover {
   color: #49200c;
   transition: 1s;
 }
+
+
+
+i:hover::before {
+  transform: rotate(360deg);
+}
+
+i:before {
+  display: inline-block;
+  /* mandatory to be able to use transform */
+  transition: 1s all;
+}
+
+@keyframes rotate {
+  0% {
+      transform: rotate(0deg) scale(1);
+  }
+  100% {
+      transform: rotate(360deg) scale(1.3);
+  }
+}
+
+
+
+@keyframes rotate {
+  0% {
+      transform: rotate(0deg) scale(1);
+  }
+  100% {
+      transform: rotate(360deg) scale(1.3);
+  }
+}
+
+.far fa-copyright {
+  color: red;
+}
+
+
 
 a {
   font-family: 'Roboto', sans-serif;
