--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 h2 {
   text-align: center;
   color: #461904;
-  font-size: 22px;
+  font-size: 25px;
   font-weight: lighter;
   font-weight: 500;
 }
@@ -51,9 +51,9 @@ h1 {
 }
 
 .card-white {
-  background-color: white;
+  background-color:#f0eceb;
   padding: 40px;
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.2);
   border-radius: 4px;
   margin: 20px 0px;
   text-align: center;
@@ -88,7 +88,7 @@ h1 {
   padding: 10px;
 }
 .list-inline i {
-  font-size: 45px;
+  font-size: 42px;
   color: #795949;
 }
 .list-inline i:hover {
