--- a/style.css
+++ b/style.css
@@ -122,13 +122,32 @@ a {
 a:hover {
   color: #49200c;
 }
-
+/* 
 @media (max-width: 720px) {
   .container {
     width: 500px;
   }
 }
 @media (max-width: 540px) {
+  .container {
+    width: 300px;
+  }
+} */
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
   }
